@@ -29,6 +29,8 @@ Release 0.19.0 - Unreleased
    HBASE-929   Clarify that ttl in HColumnDescriptor is seconds
    HBASE-930   RegionServer stuck: HLog: Could not append. Requesting close of
                log java.io.IOException: Could not get block locations. Aborting...
+   HBASE-926   If no master, regionservers should hang out rather than fail on
+               connection and shut themselves down
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
